--- a/index.html
+++ b/index.html
@@ -8,43 +8,128 @@
       font-family: Arial, sans-serif;
       background: linear-gradient(135deg, #ff9a9e, #fad0c4);
       height: 100vh;
+      margin: 0;
+      overflow: hidden;
       display: flex;
       justify-content: center;
       align-items: center;
-      margin: 0;
     }
+
     .card {
       background: white;
       padding: 40px;
       border-radius: 20px;
       text-align: center;
       box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+      position: relative;
+      z-index: 2;
     }
+
     h1 {
       color: #ff4d6d;
+      margin-bottom: 25px;
     }
+
     button {
       font-size: 18px;
-      padding: 12px 25px;
-      margin: 10px;
+      padding: 14px 30px;
       border: none;
-      border-radius: 25px;
+      border-radius: 30px;
       cursor: pointer;
+      position: relative;
+      transition: transform 0.2s;
     }
-    .yes {
+
+    #yesBtn {
       background-color: #ff4d6d;
       color: white;
+      margin-right: 10px;
     }
-    .no {
+
+    #noBtn {
       background-color: #ccc;
+      color: #333;
+      position: absolute;
+    }
+
+    /* Floating hearts */
+    .heart {
+      position: absolute;
+      bottom: -20px;
+      font-size: 20px;
+      animation: floatUp 6s linear infinite;
+      opacity: 0.8;
+    }
+
+    @keyframes floatUp {
+      0% {
+        transform: translateY(0);
+        opacity: 0.8;
+      }
+      100% {
+        transform: translateY(-110vh);
+        opacity: 0;
+      }
     }
   </style>
 </head>
 <body>
+
   <div class="card">
     <h1>Will you be my Valentine? 💖</h1>
-    <button class="yes" onclick="alert('Yay! 💕 I knew it!')">Yes 💘</button>
-    <button class="no" onclick="alert('Aww 😢')">No 💔</button>
+    <button id="yesBtn" onclick="yesClick()">Yes 💘</button>
+    <button id="noBtn" onmouseover="moveNo()">No 💔</button>
   </div>
+
+  <script>
+    let yesScale = 1;
+    let dodgeCount = 0;
+
+    function moveNo() {
+      dodgeCount++;
+
+      const noBtn = document.getElementById("noBtn");
+      const yesBtn = document.getElementById("yesBtn");
+
+      const x = Math.random() * (window.innerWidth - 100);
+      const y = Math.random() * (window.innerHeight - 50);
+
+      noBtn.style.left = x + "px";
+      noBtn.style.top = y + "px";
+
+      // Make YES bigger
+      yesScale += 0.2;
+      yesBtn.style.transform = `scale(${yesScale})`;
+
+      // Remove NO after dodging too much
+      if (dodgeCount >= 6) {
+        noBtn.style.display = "none";
+      }
+    }
+
+    function yesClick() {
+      document.body.innerHTML = `
+        <h1 style="color:#ff4d6d;text-align:center;">
+          YAYYY 💕<br>
+          You’re my Valentine 😍💘
+        </h1>
+      `;
+    }
+
+    // Floating hearts generator
+    setInterval(() => {
+      const heart = document.createElement("div");
+      heart.className = "heart";
+      heart.innerText = ["💖","💘","💕","💞","❤️"][Math.floor(Math.random()*5)];
+      heart.style.left = Math.random() * 100 + "vw";
+      heart.style.fontSize = Math.random() * 20 + 15 + "px";
+      document.body.appendChild(heart);
+
+      setTimeout(() => {
+        heart.remove();
+      }, 6000);
+    }, 300);
+  </script>
+
 </body>
 </html>
