--- a/index.html
+++ b/index.html
@@ -3,60 +3,60 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Will You Be My Valentine?</title>
+<title>Valentine Surprise</title>
 <style>
   body {
     margin: 0;
-    height: 100vh;
+    padding: 0;
     background: pink;
     overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
     font-family: 'Comic Sans MS', cursive, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
   h1 {
-    font-size: 25rem; /* huge 25-inch-like letters */
+    font-size: 25rem; /* giant letters ~25in */
     color: red;
     text-align: center;
     margin: 0;
   }
 
-  #teddy {
+  #teddy-container {
     position: relative;
-    width: 200px;
-    margin-top: -50px;
+    width: 300px;
+    margin-top: -100px;
   }
 
-  #teddy img {
+  #teddy {
     width: 100%;
   }
 
-  #heart-text {
+  #teddy-text {
     position: absolute;
-    top: 20%;
+    top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
+    font-size: 1.3rem;
     font-weight: bold;
-    font-size: 1.2rem;
     text-align: center;
   }
 
   #buttons {
-    margin-top: 20px;
+    margin-top: 50px;
     position: relative;
   }
 
   button {
-    padding: 15px 25px;
+    padding: 15px 30px;
     margin: 10px;
     font-size: 1.5rem;
     cursor: pointer;
     border: none;
-    border-radius: 10px;
+    border-radius: 12px;
     transition: all 0.2s ease;
   }
 
@@ -82,8 +82,8 @@
   }
 
   @keyframes floatUp {
-    0% { transform: translateY(100vh) scale(1); opacity:1; }
-    100% { transform: translateY(-100px) scale(0.5); opacity:0; }
+    0% { transform: translateY(100vh) scale(1); opacity: 1; }
+    100% { transform: translateY(-100px) scale(0.5); opacity: 0; }
   }
 
   /* Rose explosion */
@@ -105,9 +105,10 @@
 <body>
 
 <h1>💌</h1>
-<div id="teddy">
-  <img src="https://i.imgur.com/3v4Zp7b.png" alt="Teddy Bear Holding Heart">
-  <div id="heart-text">Will you be my Valentine, Toots?</div>
+
+<div id="teddy-container">
+  <img id="teddy" src="https://i.imgur.com/2yVx1xD.png" alt="Teddy Bear with Roses">
+  <div id="teddy-text">Will you be my Valentine, Toots?</div>
 </div>
 
 <div id="buttons">
@@ -116,62 +117,60 @@
 </div>
 
 <script>
-  const noBtn = document.getElementById('no');
-  const yesBtn = document.getElementById('yes');
-  const body = document.body;
+const noBtn = document.getElementById('no');
+const yesBtn = document.getElementById('yes');
+const body = document.body;
 
-  // Initialize No button position
-  noBtn.style.top = '0px';
-  noBtn.style.left = '200px';
+// Initialize No button position
+noBtn.style.top = '0px';
+noBtn.style.left = '250px';
 
-  // Make hearts float
-  function createHeart() {
-    const heart = document.createElement('div');
-    heart.classList.add('heart');
-    heart.style.left = Math.random() * window.innerWidth + 'px';
-    heart.style.animationDuration = (3 + Math.random() * 3) + 's';
-    body.appendChild(heart);
-    setTimeout(() => heart.remove(), 6000);
+// Floating hearts
+function createHeart() {
+  const heart = document.createElement('div');
+  heart.classList.add('heart');
+  heart.style.left = Math.random() * window.innerWidth + 'px';
+  heart.style.animationDuration = (3 + Math.random() * 3) + 's';
+  body.appendChild(heart);
+  setTimeout(() => heart.remove(), 6000);
+}
+setInterval(createHeart, 300);
+
+// No button dodge behavior
+noBtn.addEventListener('mouseenter', () => {
+  const yesRect = yesBtn.getBoundingClientRect();
+  let newX = Math.random() * (window.innerWidth - noBtn.offsetWidth);
+  let newY = Math.random() * (window.innerHeight - noBtn.offsetHeight);
+
+  // While No overlaps Yes, move and increase Yes size
+  while (
+    newX < yesRect.right && newX + noBtn.offsetWidth > yesRect.left &&
+    newY < yesRect.bottom && newY + noBtn.offsetHeight > yesRect.top
+  ) {
+    newX = Math.random() * (window.innerWidth - noBtn.offsetWidth);
+    newY = Math.random() * (window.innerHeight - noBtn.offsetHeight);
+    // Increase Yes button
+    let scale = parseFloat(yesBtn.style.transform.replace('scale(','').replace(')','')) || 1;
+    yesBtn.style.transform = `scale(${scale + 0.2})`;
   }
-  setInterval(createHeart, 300);
 
-  // Dodge "No" button
-  noBtn.addEventListener('mouseenter', () => {
-    const yesRect = yesBtn.getBoundingClientRect();
-    let newX = Math.random() * (window.innerWidth - noBtn.offsetWidth);
-    let newY = Math.random() * (window.innerHeight - noBtn.offsetHeight);
+  noBtn.style.left = newX + 'px';
+  noBtn.style.top = newY + 'px';
+});
 
-    // Make No disappear if Yes overlaps
-    const yesWidth = yesBtn.offsetWidth;
-    const yesHeight = yesBtn.offsetHeight;
-
-    while (
-      newX < yesRect.right && newX + noBtn.offsetWidth > yesRect.left &&
-      newY < yesRect.bottom && newY + noBtn.offsetHeight > yesRect.top
-    ) {
-      newX = Math.random() * (window.innerWidth - noBtn.offsetWidth);
-      newY = Math.random() * (window.innerHeight - noBtn.offsetHeight);
-      // Also increase Yes size
-      yesBtn.style.transform = `scale(${1 + Math.random() * 1})`;
-    }
-
-    noBtn.style.left = newX + 'px';
-    noBtn.style.top = newY + 'px';
-  });
-
-  // Yes click explosion
-  yesBtn.addEventListener('click', () => {
-    for(let i=0;i<50;i++){
-      const rose = document.createElement('div');
-      rose.classList.add('rose');
-      rose.style.left = yesBtn.offsetLeft + yesBtn.offsetWidth/2 + 'px';
-      rose.style.top = yesBtn.offsetTop + yesBtn.offsetHeight/2 + 'px';
-      rose.style.setProperty('--x', (Math.random()-0.5)*500 + 'px');
-      rose.style.setProperty('--y', (Math.random()-0.5)*500 + 'px');
-      body.appendChild(rose);
-      setTimeout(() => rose.remove(), 1000);
-    }
-  });
+// Yes click: rose explosion
+yesBtn.addEventListener('click', () => {
+  for(let i=0;i<50;i++){
+    const rose = document.createElement('div');
+    rose.classList.add('rose');
+    rose.style.left = yesBtn.offsetLeft + yesBtn.offsetWidth/2 + 'px';
+    rose.style.top = yesBtn.offsetTop + yesBtn.offsetHeight/2 + 'px';
+    rose.style.setProperty('--x', (Math.random()-0.5)*500 + 'px');
+    rose.style.setProperty('--y', (Math.random()-0.5)*500 + 'px');
+    body.appendChild(rose);
+    setTimeout(() => rose.remove(), 1000);
+  }
+});
 </script>
 
 </body>
